@@ -1,45 +1,84 @@
 package org.ecommerce.ecommercebackeend.Config;
 
 
-import jakarta.servlet.http.HttpServletRequest;
+
+
+import org.ecommerce.ecommercebackeend.JWT.AuthTokenFilter;
+import org.ecommerce.ecommercebackeend.Service.UserDetailsServiceImpl;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.password.CompromisedPasswordChecker;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.authentication.password.HaveIBeenPwnedRestApiPasswordChecker;
 import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
+
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
+
 
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
+
+
     @Bean
-    public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http)throws Exception{
+    public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http, AuthTokenFilter authTokenFilter)throws Exception{
         CsrfTokenRequestAttributeHandler csrfTokenRequestAttributeHandler = new CsrfTokenRequestAttributeHandler();
         http.sessionManagement(sessionConfig -> sessionConfig.sessionCreationPolicy(
                 SessionCreationPolicy.STATELESS
         ))
-                .cors(corsConfig -> corsConfig.configurationSource(new CorsConfigurationSource() {
-                    @Override
-                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                        CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(List.of("http"));
-                        config.setAllowedMethods(List.of("*"));
-                        config.setAllowCredentials(true);
-                        config.setAllowedHeaders(List.of("*"));
-                        config.setMaxAge(3600L
-                        );
-                        return config;
-                    }
+                .cors(corsConfig -> corsConfig.configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Collections.singletonList("http:"));
+                    config.setAllowedMethods(Arrays.asList("PUT", "POST" , "DELETE", "GET"));
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setMaxAge(3600L
+                    );
+                    return config;
                 }))
                 .authorizeHttpRequests(requests -> requests
-                        .requestMatchers())
+                        .requestMatchers("*").authenticated()
+                        .requestMatchers("*").permitAll()).
+                httpBasic(Customizer.withDefaults())
+                .formLogin(Customizer.withDefaults());
+        http.addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class);
+        return http.build();
+    }
+
+
+    @Bean
+    public PasswordEncoder passwordEncoder(){
+        return new BCryptPasswordEncoder();
+    }
+
+
+    @Bean
+    public CompromisedPasswordChecker compromisedPasswordChecker(){
+        return new HaveIBeenPwnedRestApiPasswordChecker(); //Checking for compromised Password
+    }
+
+
+    @Bean
+    public AuthenticationManager authenticationManager (UserDetailsServiceImpl userDetailsService,
+                                                        PasswordEncoder passwordEncoder){
+        AuthenticationProvider authenticationProvider =
+                new AuthenticationProvider(userDetailsService,passwordEncoder);
+        ProviderManager providerManager = new ProviderManager(authenticationProvider);
+        providerManager.setEraseCredentialsAfterAuthentication(false);
+        return providerManager;
     }
 }
